@@ -16,45 +16,46 @@
 package com.expediagroup.beekeeper.cleanup.path.aws;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 import static org.mockito.Mockito.verifyNoMoreInteractions;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.api.extension.RegisterExtension;
 import org.mockito.Mockito;
-import org.mockito.junit.jupiter.MockitoExtension;
 
-import io.findify.s3mock.S3Mock;
-
+import com.adobe.testing.s3mock.junit5.S3MockExtension;
 import com.amazonaws.services.s3.AmazonS3;
-import com.amazonaws.services.s3.model.AmazonS3Exception;
-import com.amazonaws.services.s3.model.DeleteObjectsRequest;
 import com.amazonaws.services.s3.model.ObjectMetadata;
 import com.amazonaws.services.s3.model.S3ObjectSummary;
 
-@ExtendWith(MockitoExtension.class)
 class S3ClientTest {
 
+  private static final String BUCKET = "bucket";
+
+  @RegisterExtension
+  static final S3MockExtension S3_MOCK = S3MockExtension.builder()
+    .silent()
+    .withSecureConnection(false)
+    .withInitialBuckets(BUCKET)
+    .build();
+  private final AmazonS3 amazonS3 = S3_MOCK.createS3Client();
+
   private final String content = "content";
-  private final String bucket = "bucket";
   private final String keyRoot = "table/partition_1";
   private final String key1 = "table/partition_1/file1";
   private final String key2 = "table/partition_1/file2";
 
-  private final S3Mock s3Mock = new S3Mock.Builder().withPort(0).withInMemoryBackend().build();
-  private AmazonS3 amazonS3;
   private S3Client s3Client;
   private S3Client s3ClientDryRun;
 
   @BeforeEach
   void setUp() {
-    amazonS3 = AmazonS3Factory.newInstance(s3Mock);
-    amazonS3.createBucket(bucket);
+    amazonS3.listObjects(BUCKET)
+      .getObjectSummaries()
+      .forEach(obj -> amazonS3.deleteObject(BUCKET, obj.getKey()));
 
     s3Client = new S3Client(amazonS3, false);
     s3ClientDryRun = new S3Client(amazonS3, true);
@@ -62,64 +63,110 @@ class S3ClientTest {
 
   @Test
   void deleteObject() {
-    amazonS3.putObject(bucket, key1, content);
-    s3Client.deleteObject(bucket, key1);
-    assertThat(amazonS3.doesObjectExist(bucket, key1)).isFalse();
+    amazonS3.putObject(BUCKET, key1, content);
+    s3Client.deleteObject(BUCKET, key1);
+    assertThat(amazonS3.doesObjectExist(BUCKET, key1)).isFalse();
+  }
+
+  @Test
+  void deleteObjectWithSpace() {
+    String spacedKey = keyRoot + "/ /file";
+    amazonS3.putObject(BUCKET, spacedKey, content);
+    s3Client.deleteObject(BUCKET, spacedKey);
+    assertThat(amazonS3.doesObjectExist(BUCKET, spacedKey)).isFalse();
+  }
+
+  @Test
+  void deleteObjectsWithSpace() {
+    String spacedKey1 = keyRoot + "/ /file1";
+    String spacedKey2 = keyRoot + "/ /file2";
+    amazonS3.putObject(BUCKET, spacedKey1, content);
+    amazonS3.putObject(BUCKET, spacedKey2, content);
+    s3Client.deleteObjects(BUCKET, List.of(spacedKey1, spacedKey2));
+    assertThat(amazonS3.doesObjectExist(BUCKET, spacedKey1)).isFalse();
+    assertThat(amazonS3.doesObjectExist(BUCKET, spacedKey2)).isFalse();
   }
 
   @Test
   void deleteObjectDryRun() {
-    amazonS3.putObject(bucket, key1, content);
-    s3ClientDryRun.deleteObject(bucket, key1);
-    assertThat(amazonS3.doesObjectExist(bucket, key1)).isTrue();
+    amazonS3.putObject(BUCKET, key1, content);
+    s3ClientDryRun.deleteObject(BUCKET, key1);
+    assertThat(amazonS3.doesObjectExist(BUCKET, key1)).isTrue();
   }
 
   @Test
   void listObjects() {
-    amazonS3.putObject(bucket, key1, content);
-    amazonS3.putObject(bucket, key2, content);
+    amazonS3.putObject(BUCKET, key1, content);
+    amazonS3.putObject(BUCKET, key2, content);
 
-    List<S3ObjectSummary> result = s3Client.listObjects(bucket, keyRoot);
+    List<S3ObjectSummary> result = s3Client.listObjects(BUCKET, keyRoot);
 
     assertThat(result.size()).isEqualTo(2);
-    assertThat(result.get(0).getBucketName()).isEqualTo(bucket);
+    assertThat(result.get(0).getBucketName()).isEqualTo(BUCKET);
     assertThat(result.get(0).getKey()).isEqualTo(key1);
-    assertThat(result.get(1).getBucketName()).isEqualTo(bucket);
+    assertThat(result.get(1).getBucketName()).isEqualTo(BUCKET);
     assertThat(result.get(1).getKey()).isEqualTo(key2);
   }
 
   @Test
-  void deleteObjectsInDirectory() {
-    amazonS3.putObject(bucket, key1, content);
-    amazonS3.putObject(bucket, key2, content);
+  void listObjectsWithSpace() {
+    String spacedKey1 = keyRoot + "/ /file1";
+    String spacedKey2 = keyRoot + "/ /file2";
+    amazonS3.putObject(BUCKET, spacedKey1, content);
+    amazonS3.putObject(BUCKET, spacedKey2, content);
 
-    DeleteObjectsRequest deleteObjectsRequest = new DeleteObjectsRequest(bucket);
-    deleteObjectsRequest.setKeys(
-        Arrays.asList(new DeleteObjectsRequest.KeyVersion(key1), new DeleteObjectsRequest.KeyVersion(key2)));
-    List<String> result = s3Client.deleteObjects(deleteObjectsRequest);
+    List<S3ObjectSummary> result = s3Client.listObjects(BUCKET, keyRoot);
+
+    assertThat(result.size()).isEqualTo(2);
+    assertThat(result.get(0).getBucketName()).isEqualTo(BUCKET);
+    assertThat(result.get(0).getKey()).isEqualTo(spacedKey1);
+    assertThat(result.get(1).getBucketName()).isEqualTo(BUCKET);
+    assertThat(result.get(1).getKey()).isEqualTo(spacedKey2);
+  }
+
+  @Test
+  void listObjectsWithSpaceInSearch() {
+    String spacedKeyRoot = keyRoot + "/ /";
+    String spacedKey1 = spacedKeyRoot + "file1";
+    String spacedKey2 = spacedKeyRoot + "file2";
+    amazonS3.putObject(BUCKET, spacedKey1, content);
+    amazonS3.putObject(BUCKET, spacedKey2, content);
+
+    List<S3ObjectSummary> result = s3Client.listObjects(BUCKET, spacedKeyRoot);
+
+    assertThat(result.size()).isEqualTo(2);
+    assertThat(result.get(0).getBucketName()).isEqualTo(BUCKET);
+    assertThat(result.get(0).getKey()).isEqualTo(spacedKey1);
+    assertThat(result.get(1).getBucketName()).isEqualTo(BUCKET);
+    assertThat(result.get(1).getKey()).isEqualTo(spacedKey2);
+  }
+
+  @Test
+  void deleteObjectsInDirectory() {
+    amazonS3.putObject(BUCKET, key1, content);
+    amazonS3.putObject(BUCKET, key2, content);
+
+    List<String> result = s3Client.deleteObjects(BUCKET, List.of(key1, key2));
 
     assertThat(result.size()).isEqualTo(2);
     assertThat(result).contains(key1);
     assertThat(result).contains(key2);
-    assertThat(amazonS3.doesObjectExist(bucket, key1)).isFalse();
-    assertThat(amazonS3.doesObjectExist(bucket, key2)).isFalse();
+    assertThat(amazonS3.doesObjectExist(BUCKET, key1)).isFalse();
+    assertThat(amazonS3.doesObjectExist(BUCKET, key2)).isFalse();
   }
 
   @Test
   void deleteObjectsInDirectoryDryRun() {
-    amazonS3.putObject(bucket, key1, content);
-    amazonS3.putObject(bucket, key2, content);
+    amazonS3.putObject(BUCKET, key1, content);
+    amazonS3.putObject(BUCKET, key2, content);
 
-    DeleteObjectsRequest deleteObjectsRequest = new DeleteObjectsRequest(bucket);
-    deleteObjectsRequest.setKeys(
-        Arrays.asList(new DeleteObjectsRequest.KeyVersion(key1), new DeleteObjectsRequest.KeyVersion(key2)));
-    List<String> result = s3ClientDryRun.deleteObjects(deleteObjectsRequest);
+    List<String> result = s3ClientDryRun.deleteObjects(BUCKET, List.of(key1, key2));
 
     assertThat(result.size()).isEqualTo(2);
     assertThat(result).contains(key1);
     assertThat(result).contains(key2);
-    assertThat(amazonS3.doesObjectExist(bucket, key1)).isTrue();
-    assertThat(amazonS3.doesObjectExist(bucket, key2)).isTrue();
+    assertThat(amazonS3.doesObjectExist(BUCKET, key1)).isTrue();
+    assertThat(amazonS3.doesObjectExist(BUCKET, key2)).isTrue();
   }
 
   @Test
@@ -127,87 +174,101 @@ class S3ClientTest {
     AmazonS3 amazonS3 = Mockito.mock(AmazonS3.class);
     S3Client s3Client = new S3Client(amazonS3, false);
 
-    List<DeleteObjectsRequest.KeyVersion> deleteObjectsRequestKeys = Collections.emptyList();
-    DeleteObjectsRequest deleteObjectsRequest = new DeleteObjectsRequest(bucket);
-    deleteObjectsRequest.setKeys(deleteObjectsRequestKeys);
-
-    List<String> result = s3Client.deleteObjects(deleteObjectsRequest);
+    List<String> result = s3Client.deleteObjects(BUCKET, Collections.emptyList());
 
     assertThat(result.size()).isEqualTo(0);
     verifyNoMoreInteractions(amazonS3);
   }
 
   @Test
-  void deleteObjectPathDoesNotExist() {
-    // deleteObject is called only if object exists, so this throws an exception
-    assertThatExceptionOfType(AmazonS3Exception.class).isThrownBy(() -> s3Client.deleteObject(bucket, keyRoot));
+  void doesObjectExistForFile() {
+    amazonS3.putObject(BUCKET, key2, content);
+    boolean result = s3Client.doesObjectExist(BUCKET, key2);
+    assertThat(result).isTrue();
   }
 
   @Test
-  void doesObjectExistForFile() {
-    amazonS3.putObject(bucket, key2, content);
-    boolean result = s3Client.doesObjectExist(bucket, key2);
+  void doesObjectExistForFileWithSpaceInKey() {
+    String spacedKey = key2 + "/ /file";
+    amazonS3.putObject(BUCKET, spacedKey, content);
+    boolean result = s3Client.doesObjectExist(BUCKET, spacedKey);
     assertThat(result).isTrue();
   }
 
   @Test
   void doesObjectExistForDirectory() {
-    amazonS3.putObject(bucket, key2, content);
-    boolean result = s3Client.doesObjectExist(bucket, keyRoot);
+    amazonS3.putObject(BUCKET, key2, content);
+    boolean result = s3Client.doesObjectExist(BUCKET, keyRoot);
     assertThat(result).isFalse();
   }
 
   @Test
   void doesObjectExistForDirectoryWithTrailingSlash() {
-    amazonS3.putObject(bucket, key2, content);
-    boolean result = s3Client.doesObjectExist(bucket, keyRoot + "/");
+    amazonS3.putObject(BUCKET, key2, content);
+    boolean result = s3Client.doesObjectExist(BUCKET, keyRoot + "/");
     assertThat(result).isFalse();
   }
 
   @Test
   void getObjectSize() {
-    amazonS3.putObject(bucket, key2, content);
-    ObjectMetadata result = s3Client.getObjectMetadata(bucket, key2);
+    amazonS3.putObject(BUCKET, key2, content);
+    ObjectMetadata result = s3Client.getObjectMetadata(BUCKET, key2);
+    assertThat(result.getContentLength()).isNotEqualTo(0L);
+  }
+
+  @Test
+  void getObjectSizeWithSpaceInKey() {
+    String spacedKey = key2 + "/ /file";
+    amazonS3.putObject(BUCKET, spacedKey, content);
+    ObjectMetadata result = s3Client.getObjectMetadata(BUCKET, spacedKey);
     assertThat(result.getContentLength()).isNotEqualTo(0L);
   }
 
   @Test
   void getObjectSizeForEmptyFile() {
-    amazonS3.putObject(bucket, key2, "");
-    ObjectMetadata result = s3Client.getObjectMetadata(bucket, key2);
+    amazonS3.putObject(BUCKET, key2, "");
+    ObjectMetadata result = s3Client.getObjectMetadata(BUCKET, key2);
     assertThat(result.getContentLength()).isEqualTo(0L);
   }
 
   @Test
   void isEmptyForNonEmptyDirectory() {
-    amazonS3.putObject(bucket, key1, content);
-    boolean result = s3Client.isEmpty(bucket, keyRoot, null);
+    amazonS3.putObject(BUCKET, key1, content);
+    boolean result = s3Client.isEmpty(BUCKET, keyRoot, null);
+    assertThat(result).isFalse();
+  }
+
+  @Test
+  void isEmptyForNonEmptyDirectoryWithSpacedKey() {
+    String spacedKey = key1 + "/ /file";
+    amazonS3.putObject(BUCKET, spacedKey, content);
+    boolean result = s3Client.isEmpty(BUCKET, keyRoot, null);
     assertThat(result).isFalse();
   }
 
   @Test
   void isEmptyForEmptyDirectory() {
-    boolean result = s3Client.isEmpty(bucket, keyRoot, null);
+    boolean result = s3Client.isEmpty(BUCKET, keyRoot, null);
     assertThat(result).isTrue();
   }
 
   @Test
   void isEmptyDryRunForNonEmptyDirectoryAndCorrectLeafKey() {
-    amazonS3.putObject(bucket, key1, content);
-    boolean result = s3ClientDryRun.isEmpty(bucket, "table", keyRoot);
+    amazonS3.putObject(BUCKET, key1, content);
+    boolean result = s3ClientDryRun.isEmpty(BUCKET, "table", keyRoot);
     assertThat(result).isTrue();
   }
 
   @Test
   void isEmptyDryRunForEmptyDirectory() {
-    boolean result = s3ClientDryRun.isEmpty(bucket, "table", keyRoot);
+    boolean result = s3ClientDryRun.isEmpty(BUCKET, "table", keyRoot);
     assertThat(result).isTrue();
   }
 
   @Test
   void isEmptyDryRunForOtherHighLevelDirectory() {
-    amazonS3.putObject(bucket, "table/partition_2", content);
-    boolean result = s3ClientDryRun.isEmpty(bucket, "table", keyRoot);
+    amazonS3.putObject(BUCKET, "table/partition_2", content);
+    boolean result = s3ClientDryRun.isEmpty(BUCKET, "table", keyRoot);
     assertThat(result).isFalse();
   }
 
@@ -224,15 +285,15 @@ class S3ClientTest {
     String sentinel2 = "table/test_$folder$";
     String sentinel3 = "table/test/test_$folder$";
     String sentinel4 = "table/test/test/partition1_$folder$";
-    amazonS3.putObject(bucket, filePath, content);
-    amazonS3.putObject(bucket, sentinel1, "");
-    amazonS3.putObject(bucket, sentinel2, "");
-    amazonS3.putObject(bucket, sentinel3, "");
-    amazonS3.putObject(bucket, sentinel4, "");
+    amazonS3.putObject(BUCKET, filePath, content);
+    amazonS3.putObject(BUCKET, sentinel1, "");
+    amazonS3.putObject(BUCKET, sentinel2, "");
+    amazonS3.putObject(BUCKET, sentinel3, "");
+    amazonS3.putObject(BUCKET, sentinel4, "");
 
-    assertThat(s3ClientDryRun.isEmpty(bucket, folder3, folder4)).isTrue();
-    assertThat(s3ClientDryRun.isEmpty(bucket, folder3, otherPartition)).isFalse();
-    assertThat(s3ClientDryRun.isEmpty(bucket, folder2, folder3)).isTrue();
-    assertThat(s3ClientDryRun.isEmpty(bucket, folder1, folder2)).isTrue();
+    assertThat(s3ClientDryRun.isEmpty(BUCKET, folder3, folder4)).isTrue();
+    assertThat(s3ClientDryRun.isEmpty(BUCKET, folder3, otherPartition)).isFalse();
+    assertThat(s3ClientDryRun.isEmpty(BUCKET, folder2, folder3)).isTrue();
+    assertThat(s3ClientDryRun.isEmpty(BUCKET, folder1, folder2)).isTrue();
   }
 }
